--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^10.0.0",
-    "react-router": "^7.9.5"
+    "react-router": "^7.9.5",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
